ARM: configs: rv1126-spi-nor.config: add led RGB13H driver
Signed-off-by: Yu YongZhen <yuyz@rock-chips.com>
Change-Id: I5a6e41b174762c8f75b1796a43e7437e9dbf8819

--- a/arch/arm/configs/rv1126-spi-nor.config
+++ b/arch/arm/configs/rv1126-spi-nor.config
@@ -18,6 +18,7 @@ CONFIG_JFFS2_FS=y
 CONFIG_KERNEL_XZ=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_GPIO=m
+CONFIG_LEDS_CLASS_FLASH=m
 CONFIG_LEDS_PWM=m
 # CONFIG_LEDS_TRIGGERS is not set
 CONFIG_MAC80211=m
@@ -118,6 +119,11 @@ CONFIG_JFFS2_FS_WRITEBUFFER=y
 CONFIG_JFFS2_RTIME=y
 # CONFIG_JFFS2_SUMMARY is not set
 CONFIG_JFFS2_ZLIB=y
+# CONFIG_LEDS_AAT1290 is not set
+# CONFIG_LEDS_AS3645A is not set
+# CONFIG_LEDS_KTD2692 is not set
+# CONFIG_LEDS_LM3601X is not set
+CONFIG_LEDS_RGB13H=m
 CONFIG_LOCKD=y
 CONFIG_LOCKD_V4=y
 CONFIG_MTD_BLKDEVS=y
@@ -137,6 +143,7 @@ CONFIG_SUNRPC=y
 CONFIG_SUNRPC_GSS=y
 # CONFIG_USB_KBD is not set
 # CONFIG_USB_MOUSE is not set
+# CONFIG_V4L2_FLASH_LED_CLASS is not set
 CONFIG_XZ_DEC_ARM=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_BCJ=y
