--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -848,6 +848,7 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rv1109-fpga.dtb \
 	rv1126-38x38-v10-spi-nor.dtb \
 	rv1126-ai-cam-ddr3-v1.dtb \
+	rv1126-ai-cam-ddr3-v1-spi-nand.dtb \
 	rv1126-bat-ipc-v10.dtb \
 	rv1126-evb-ddr3-v10.dtb \
 	rv1126-evb-ddr3-v10-robot.dtb \
