ARM: dts: rv1126: add isp_reserved to rkcif_mipi_lvds/rkcif_dvp
Signed-off-by: Hu Kejun <william.hu@rock-chips.com>
Change-Id: I6e652c0c6963dadba7bd275270bebaafd8875766

--- a/arch/arm/boot/dts/rv1126.dtsi
+++ b/arch/arm/boot/dts/rv1126.dtsi
@@ -333,7 +333,8 @@
 	rkcif_dvp: rkcif_dvp {
 		compatible = "rockchip,rkcif-dvp";
 		rockchip,hw = <&rkcif>;
-		iommus = <&rkcif_mmu>;
+		// iommus = <&rkcif_mmu>;
+		memory-region = <&isp_reserved>;
 		status = "disabled";
 	};
 
@@ -359,7 +360,8 @@
 	rkcif_mipi_lvds: rkcif_mipi_lvds {
 		compatible = "rockchip,rkcif-mipi-lvds";
 		rockchip,hw = <&rkcif>;
-		iommus = <&rkcif_mmu>;
+		// iommus = <&rkcif_mmu>;
+		memory-region = <&isp_reserved>;
 		status = "disabled";
 	};
 
