ARM: dts: rv1126: 38x38 board: use vicap to get data from sensor
Signed-off-by: Hu Kejun <william.hu@rock-chips.com>
Change-Id: I9a68c4f3a3e9a6e19685f99d988ed00286b72482

--- a/arch/arm/boot/dts/rv1126-38x38-v10-spi-nor.dts
+++ b/arch/arm/boot/dts/rv1126-38x38-v10-spi-nor.dts
@@ -159,7 +159,7 @@
 
 			csidphy0_out: endpoint@0 {
 				reg = <0>;
-				remote-endpoint = <&isp_in>;
+				remote-endpoint = <&mipi_csi2_input>;
 			};
 		};
 	};
@@ -258,13 +258,46 @@
 };
 
 &isp_reserved {
-	size = <0xd000000>;
+	size = <0x20000000>;
 };
 
 &mdio {
 	phy: phy@1 {
 		compatible = "ethernet-phy-ieee802.3-c22";
 		reg = <0x1>;
+	};
+};
+
+&mipi_csi2 {
+	status = "okay";
+
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		port@0 {
+			reg = <0>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			mipi_csi2_input: endpoint@1 {
+				reg = <1>;
+				remote-endpoint = <&csidphy0_out>;
+				data-lanes = <1 2 3 4>;
+			};
+		};
+
+		port@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			mipi_csi2_output: endpoint@0 {
+				reg = <0>;
+				remote-endpoint = <&cif_mipi_in>;
+				data-lanes = <1 2 3 4>;
+			};
+		};
 	};
 };
 
@@ -300,6 +333,38 @@
 	pinctrl-0 = <&pwm3m0_pins_pull_down>;
 };
 
+&rkcif {
+	status = "okay";
+};
+
+&rkcif_mmu {
+	status = "disabled";
+};
+
+&rkcif_mipi_lvds {
+	status = "okay";
+
+	port {
+		/* MIPI CSI-2 endpoint */
+		cif_mipi_in: endpoint {
+			remote-endpoint = <&mipi_csi2_output>;
+			data-lanes = <1 2 3 4>;
+		};
+	};
+};
+
+&rkcif_mipi_lvds_sditf {
+	status = "okay";
+
+	port {
+		/* MIPI CSI-2 endpoint */
+		mipi_lvds_sditf: endpoint {
+			remote-endpoint = <&isp_in>;
+			data-lanes = <1 2 3 4>;
+		};
+	};
+};
+
 &rkisp_vir0 {
 	status = "okay";
 
@@ -311,7 +376,7 @@
 
 			isp_in: endpoint@0 {
 				reg = <0>;
-				remote-endpoint = <&csidphy0_out>;
+				remote-endpoint = <&mipi_lvds_sditf>;
 			};
 		};
 	};
