ARM: configs: rv1126-spi-nor.config: add cif driver
Signed-off-by: Yu YongZhen <yuyz@rock-chips.com>
Change-Id: Ia12ed82f75be27ef4662d1e6679538be3ba684cd

--- a/arch/arm/configs/rv1126-spi-nor.config
+++ b/arch/arm/configs/rv1126-spi-nor.config
@@ -100,7 +100,7 @@ CONFIG_VIDEO_IMX415=m
 CONFIG_VIDEO_OS04A10=m
 # CONFIG_VIDEO_OV4689 is not set
 CONFIG_VIDEO_RK_IRCUT=m
-# CONFIG_VIDEO_ROCKCHIP_CIF is not set
+CONFIG_VIDEO_ROCKCHIP_CIF=m
 CONFIG_VIDEO_ROCKCHIP_ISP=m
 CONFIG_VIDEO_ROCKCHIP_ISPP=m
 CONFIG_WL_ROCKCHIP=m
