ARM: dts: rv1126: add rockchip,enable-cmd-retry for rkvenc_mmu
Change-Id: I33195d62255c83e9538e6c60bb3f0806e39b3d51
Signed-off-by: Simon Xue <xxm@rock-chips.com>

--- a/arch/arm/boot/dts/rv1126.dtsi
+++ b/arch/arm/boot/dts/rv1126.dtsi
@@ -2146,6 +2146,7 @@
 		clocks = <&cru ACLK_VENC>, <&cru HCLK_VENC>;
 		clock-names = "aclk", "iface";
 		rockchip,disable-mmu-reset;
+		rockchip,enable-cmd-retry;
 		#iommu-cells = <0>;
 		power-domains = <&power RV1126_PD_VEPU>;
 		status = "disabled";
