--- a/arch/arm/configs/rv1126-spi-nor.config
+++ b/arch/arm/configs/rv1126-spi-nor.config
@@ -7,6 +7,7 @@ CONFIG_BT_HCIUART=m
 # CONFIG_BT_HCIUART_H4 is not set
 # CONFIG_BT_LE is not set
 CONFIG_CFG80211=m
+CONFIG_COMMON_CLK_PROCFS=y
 # CONFIG_DEBUG_FS is not set
 CONFIG_DNS_RESOLVER=y
 CONFIG_DRM_KMS_HELPER=m
