ARM: dts: rockchip: fix imx347 module name for rv1126-sphericalipc-ddr3-v10
Signed-off-by: Zhichao Yu <zhichao.yu@rock-chips.com>
Change-Id: I420624f51dbb1afe4c02fb3e599ff63e6fa80c30

--- a/arch/arm/boot/dts/rv1126-sphericalipc-ddr3-v10.dts
+++ b/arch/arm/boot/dts/rv1126-sphericalipc-ddr3-v10.dts
@@ -384,7 +384,7 @@
 		rockchip,camera-module-index = <1>;
 		rockchip,camera-module-facing = "front";
 		rockchip,camera-module-name = "JSD3425-C1";
-		rockchip,camera-module-lens-name = "4IR";
+		rockchip,camera-module-lens-name = "40IRC";
 		port {
 			ucam_out0: endpoint {
 				remote-endpoint = <&mipi_in_ucam0>;
